classDiagram
User <|-- UserSession
User <|-- Lot

Lot <|-- Bet
User <|--  Bet

Lot --* Room

User <|-- RoomToUser
Room <|-- RoomToUser

User <|-- NotificationToUser
Notification <|-- NotificationToUser

User : int id
User : varchar(128) password
User : numeric balance
User : varchar(32) nickName
User : varchar(128) fullName
User : varchar(64) email
User : timestamp createdAt
User : timestamp updatedAt

UserSession : bigint id
UserSession : int userId
UserSession : boolean active
UserSession : timestamp expiresAt
UserSession : timestamp createdAt
UserSession : timestamp updatedAt

Lot : int id
Lot : int ownerId
Lot : int purchaserId
Lot : varchar(256) description
Lot : varchar(128) shortDescription
Lot : varchar(32) name
Lot : numeric startPrice
Lot : numeric currentPrice
Lot : varchar(32) tag
Lot : timestamp createdAt
Lot : timestamp updatedAt

Bet : bigint id
Bet : int lotId
Bet : int userId
Bet : varchar(32) status
Bet : numeric price
Bet : timestamp createdAt
Bet : timestamp updatedAt

Room : int id
Room : int lotId
Room : varchar(32) status
Room : timestamp startedAt
Room : timestamp endedAt
Room : timestamp createdAt
Room : timestamp updatedAt

RoomToUser : int id
RoomToUser : int userId
RoomToUser : int roomId
RoomToUser : boolean involved
RoomToUser : timestamp createdAt
RoomToUser : timestamp updatedAt

Notification : int id
Notification : varchar(128) message
Notification : varchar(16) level
Notification : timestamp createdAt

NotificationToUser : int id
NotificationToUser : int userId
NotificationToUser : int notificationId
NotificationToUser : boolean checked
NotificationToUser : timestamp createdAt
NotificationToUser : timestamp updatedAt